[project]
name = "langgraph-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.13",
    "langchain-openrouter>=0.1.0",
    "langgraph>=1.1.2",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
]
